trunk/Archive2/1a/f70113f750d4d4/output
main.cpp:3:18: error: 'shared_timed_mutex' in namespace 'std' does not name a type
     mutable std::shared_timed_mutex mut;
                  ^
main.cpp:16:1: error: expected ';' after class definition
 }
 ^
main.cpp: In member function 'R& R::operator=(const R&)':
main.cpp:9:9: error: 'unique_lock' is not a member of 'std'
         std::unique_lock<std::shared_timed_mutex> lhs(mut, std::defer_lock);
         ^
main.cpp:9:26: error: 'shared_timed_mutex' is not a member of 'std'
         std::unique_lock<std::shared_timed_mutex> lhs(mut, std::defer_lock);
                          ^
main.cpp:9:55: error: 'mut' was not declared in this scope
         std::unique_lock<std::shared_timed_mutex> lhs(mut, std::defer_lock);
                                                       ^
main.cpp:9:60: error: 'defer_lock' is not a member of 'std'
         std::unique_lock<std::shared_timed_mutex> lhs(mut, std::defer_lock);
                                                            ^
main.cpp:9:75: error: 'lhs' was not declared in this scope
         std::unique_lock<std::shared_timed_mutex> lhs(mut, std::defer_lock);
                                                                           ^
main.cpp:11:9: error: 'shared_lock' is not a member of 'std'
         std::shared_lock<std::shared_timed_mutex> rhs(other.mut, std::defer_lock);
         ^
main.cpp:11:26: error: 'shared_timed_mutex' is not a member of 'std'
         std::shared_lock<std::shared_timed_mutex> rhs(other.mut, std::defer_lock);
                          ^
main.cpp:11:61: error: 'const class R' has no member named 'mut'
         std::shared_lock<std::shared_timed_mutex> rhs(other.mut, std::defer_lock);
                                                             ^
main.cpp:11:66: error: 'defer_lock' is not a member of 'std'
         std::shared_lock<std::shared_timed_mutex> rhs(other.mut, std::defer_lock);
                                                                  ^
main.cpp:11:81: error: 'rhs' was not declared in this scope
         std::shared_lock<std::shared_timed_mutex> rhs(other.mut, std::defer_lock);
                                                                                 ^
main.cpp:12:9: error: 'lock' is not a member of 'std'
         std::lock(lhs, rhs);
         ^
